--- a/app/templates/servicedesk/partials/ticket_detail_modal_content.html
+++ b/app/templates/servicedesk/partials/ticket_detail_modal_content.html
@@ -48,7 +48,8 @@
         <dt class="col-sm-4">Última Atualização:</dt>
         <dd class="col-sm-8">{{ ticket.updated_at|date:"d/m/Y H:i:s" }}</dd>
 
-        {% if ticket.category %} <dt class="col-sm-4">Categoria:</dt>
+        {% if ticket.category %}
+        <dt class="col-sm-4">Categoria:</dt>
         <dd class="col-sm-8">{{ ticket.category.name|default:"N/A" }}</dd>
         {% endif %}
 
@@ -94,7 +95,8 @@
                                 <i class="fas fa-edit fa-xs"></i>
                             </button>
                             {% endif %}
-                            {% if wo.status not in "CONCLUIDA,CANCELADA" %} <button type="button" class="btn btn-xs btn-outline-danger py-0 px-1"
+                            {% if wo.status not in "CONCLUIDA,CANCELADA" %}
+                            <button type="button" class="btn btn-xs btn-outline-danger py-0 px-1"
                                     data-dismiss="modal"
                                     data-toggle="ajax-modal"
                                     data-target="#ajaxModal"
@@ -115,7 +117,8 @@
     {% endif %}
     {% if ticket.status not in "FECHADO,RESOLVIDO" %}
     <button type="button" class="btn btn-sm btn-success mt-2"
-            data-dismiss="modal" data-toggle="ajax-modal"
+            data-dismiss="modal"
+            data-toggle="ajax-modal"
             data-target="#ajaxModal"
             data-url="{% url 'servicedesk:work_order_create_modal' %}?ticket_id={{ ticket.pk }}">
         <i class="fas fa-plus"></i> Nova OS para este Ticket
@@ -124,10 +127,14 @@
 
 </div>
 <div class="modal-footer">
+    <a href="{% url 'servicedesk:ticket_pdf' ticket.pk %}" target="_blank" class="btn btn-info mr-auto">
+        <i class="fas fa-file-pdf"></i> Gerar PDF do Ticket
+    </a>
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
     {% if ticket.status not in "FECHADO,RESOLVIDO" %}
     <button type="button" class="btn btn-warning"
-            data-dismiss="modal" data-toggle="ajax-modal"
+            data-dismiss="modal"
+            data-toggle="ajax-modal"
             data-target="#ajaxModal"
             data-url="{% url 'servicedesk:ticket_update_modal' ticket.pk %}">
         <i class="fas fa-edit"></i> Editar Ticket
